fix: color contrast

--- a/src/assets/scss/base/_base-fonts.scss
+++ b/src/assets/scss/base/_base-fonts.scss
@@ -10,4 +10,5 @@
     url("../fonts/librefranklin_variable.woff2") format("woff2-variations");
   font-weight: 100 900;
   font-style: normal;
+  font-display: swap;
 }
