--- a/src/assets/scss/components/_components-cta.scss
+++ b/src/assets/scss/components/_components-cta.scss
@@ -3,7 +3,7 @@
 // ===========================================
 
 .c-cta {
-  border: 2px solid rgba(255, 255, 255, 0.54);
+  border: 2px solid rgba(255, 255, 255, 0.36);
   border-radius: 2rem;
   padding: calc(12 / 16 * 1rem) calc(24 / 16 * 1rem);
   font-size: 1rem;
