--- a/src/assets/scss/components/_components-programme.scss
+++ b/src/assets/scss/components/_components-programme.scss
@@ -61,7 +61,7 @@
   transition: color 0.2s ease-out;
 
   a:hover & {
-    color: var(--color-brand-dark);
+    color: var(--color-brand);
   }
 }
 
